internet-gateway.tf
# =========| INTERNET GATEWAY |=========

resource "aws_internet_gateway" "internet-gateway" {
  vpc_id    = aws_vpc.vpc.id

  tags      = {
    Name    = "Demo Internet Gateway"
  }
}
